@@ -65,6 +65,8 @@ xx0y2009 (v2.6.0) -** stable release **-
 		   system sampling rate; updated documentation, see
 		   ecasound(1)
         - changed: minor update ecasound's "--help"
+	- changed: when reading RIFF WAVE files, properly ignore 
+		   any unknown subchunk types
 	- fixed: do not limit max-gain reported by '-ev' to [1,max]
 		 value range
         - fixed: avoid denormal numbers in '-ete' (leads to unusually
